[gd_scene load_steps=15 format=3 uid="uid://hiyw54obfhn"]

[ext_resource type="Script" path="res://src/scripts/main_menu.gd" id="1_3s4d2"]
[ext_resource type="Texture2D" uid="uid://c5f4141nir1o0" path="res://src/assets/tilesets/1 - Grassland/background/4 - Sky_color.png" id="1_u2n3n"]
[ext_resource type="Texture2D" uid="uid://s0ffb5jo7ch" path="res://src/assets/tilesets/1 - Grassland/background/3 - Cloud_cover_2.png" id="2_no47q"]
[ext_resource type="Shader" path="res://src/shaders/movement_clouds.gdshader" id="3_5mnp3"]
[ext_resource type="Texture2D" uid="uid://bs8qtcgm2r4q" path="res://src/assets/tilesets/1 - Grassland/background/2 - Cloud_cover_1.png" id="3_drlgm"]
[ext_resource type="Texture2D" uid="uid://behvkvlmyb1lv" path="res://src/assets/tilesets/1 - Grassland/background/1 - Foreground_scenery.png" id="4_e41sn"]
[ext_resource type="Texture2D" uid="uid://d2kh2br6npxgw" path="res://src/assets/frajola/Licking (32 x 32).png" id="6_xpywi"]
[ext_resource type="FontFile" uid="uid://jv0itu46v2vp" path="res://src/assets/fonts/RevMiniPixel.ttf" id="7_tl57e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r36pv"]
shader = ExtResource("3_5mnp3")
shader_parameter/move_speed = 0.02

[sub_resource type="AtlasTexture" id="AtlasTexture_wieku"]
atlas = ExtResource("6_xpywi")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qupbj"]
atlas = ExtResource("6_xpywi")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8kni"]
atlas = ExtResource("6_xpywi")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bwsp"]
atlas = ExtResource("6_xpywi")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2jsu7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wieku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qupbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8kni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bwsp")
}],
"loop": true,
"name": &"lincking",
"speed": 5.0
}]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3s4d2")

[node name="background" type="ParallaxBackground" parent="."]

[node name="04" type="ParallaxLayer" parent="background"]

[node name="texture" type="Sprite2D" parent="background/04"]
position = Vector2(576, 324)
scale = Vector2(4, 3.11538)
texture = ExtResource("1_u2n3n")

[node name="03" type="ParallaxLayer" parent="background"]

[node name="texture" type="Sprite2D" parent="background/03"]
position = Vector2(576, 324)
scale = Vector2(4, 3.11538)
texture = ExtResource("2_no47q")

[node name="02" type="ParallaxLayer" parent="background"]

[node name="texture" type="Sprite2D" parent="background/02"]
texture_repeat = 2
material = SubResource("ShaderMaterial_r36pv")
position = Vector2(576, 324)
scale = Vector2(4, 3.11538)
texture = ExtResource("3_drlgm")

[node name="01" type="ParallaxLayer" parent="background"]

[node name="texture" type="Sprite2D" parent="background/01"]
position = Vector2(576, 324)
scale = Vector2(4, 3.11538)
texture = ExtResource("4_e41sn")

[node name="anim" type="AnimatedSprite2D" parent="."]
position = Vector2(792, 208)
scale = Vector2(26.125, 26.125)
sprite_frames = SubResource("SpriteFrames_2jsu7")
animation = &"lincking"
autoplay = "lincking"
frame_progress = 0.196343

[node name="title" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -436.0
offset_top = 46.0
offset_right = 436.0
offset_bottom = 113.0
grow_horizontal = 2

[node name="Label" type="Label" parent="title"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("7_tl57e")
theme_override_font_sizes/font_size = 64
text = "The Frajola's Adventure"
uppercase = true

[node name="buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -264.0
offset_right = 339.0
offset_bottom = -28.0
grow_vertical = 0

[node name="new_game_button" type="Button" parent="buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_tl57e")
theme_override_font_sizes/font_size = 47
text = "New Game"

[node name="select_level_button" type="Button" parent="buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_tl57e")
theme_override_font_sizes/font_size = 47
text = "Select Level"

[node name="options_button" type="Button" parent="buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_tl57e")
theme_override_font_sizes/font_size = 47
text = "Options"

[node name="quit_button" type="Button" parent="buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_tl57e")
theme_override_font_sizes/font_size = 47
text = "Quit"

[connection signal="pressed" from="buttons/new_game_button" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="buttons/select_level_button" to="." method="_on_select_level_button_pressed"]
[connection signal="pressed" from="buttons/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="buttons/quit_button" to="." method="_on_quit_button_pressed"]
